plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'jacoco'
	id 'application'
	id "com.github.johnrengelman.shadow" version "7.1.0"
}

mainClassName = 'edu.kit.datamanager.datacite.validate.ValidateApplication'
group = 'edu.kit.datamanager'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

println "Building ${name} version: ${version}"
println "Running gradle version: $gradle.gradleVersion"
println "JDK version: ${JavaVersion.current()}"

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// generated by spring initializr
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'junit:junit:4.13.2'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// necessary for identifier types
	implementation 'edu.kit.datamanager:service-base:1.0.4'
	implementation 'org.reflections:reflections:0.10.2'

	// logging
	implementation 'org.slf4j:slf4j-api'
	implementation 'ch.qos.logback:logback-classic'
}

jar {
	manifest {
		attributes 'Main-Class': 'edu.kit.datamanager.datacite.validate.ValidateApplication'
	}
}

test {
	useJUnitPlatform()
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = false
	}
}
